force-app/main/default/objects/Heartbeat_Server_Log__c/Heartbeat_Server_Log__c.object-meta.xml
<CustomObject>
    <label>Heartbeat Server Log</label>
    <nameField>
        <displayFormat>HSL-{000000}</displayFormat>
        <label>Heartbeat Server Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Heartbeat Server Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>