force-app/main/default/objects/Heartbeat_Server_Log__c/fields/Exception_Log__c.field-meta.xml
<CustomField>
    <fullName>Exception_Log__c</fullName>
    <label>Exception Log</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>