force-app/main/default/objects/Heartbeat_Server_Log__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <label>Request Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>