force-app/main/default/objects/Heartbeat_Server_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of callout</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Third Party Hardware</fullName>
            </value>
            <value>
                <fullName>CDM/Mosaic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>